--- a/source/_posts/2014-06-22-week-four.md
+++ b/source/_posts/2014-06-22-week-four.md
@@ -13,4 +13,5 @@ Flat files are a very simple method of storing data that involves the applicatio
 * There's no concurrent access since opening a file handle places a file lock on it.
 * Reading and writing from a file incurs a lot of overhead (This is alleviated by caching, but increases the complexity of a program)
 * The program is in charge of file management and writing the files. Occasionally there are libraries that help with this, such as INI or CSV libraries.
-* 
+
+The main idea of flat files is to reduce the dependencies that a program requires, so that an entire database doesn't have to be bundled with the program. In some languages, like python, there is already support for databases like SQLite, negating many of the advantages that flat files have. However, if reading and writing is only done rarely, there really is no point in increasing the complexity of the code to implement an SQL engine 
