--- a/source/_posts/2014-06-22-week-four.md
+++ b/source/_posts/2014-06-22-week-four.md
@@ -14,4 +14,6 @@ Flat files are a very simple method of storing data that involves the applicatio
 * Reading and writing from a file incurs a lot of overhead (This is alleviated by caching, but increases the complexity of a program)
 * The program is in charge of file management and writing the files. Occasionally there are libraries that help with this, such as INI or CSV libraries.
 
-The main idea of flat files is to reduce the dependencies that a program requires, so that an entire database doesn't have to be bundled with the program. In some languages, like python, there is already support for databases like SQLite, negating many of the advantages that flat files have. However, if reading and writing is only done rarely, there really is no point in increasing the complexity of the code to implement an SQL engine 
+The main idea of flat files is to reduce the dependencies that a program requires, so that an entire database doesn't have to be bundled with the program. In some languages, like python, there is already support for databases like SQLite, negating many of the advantages that flat files have. However, if reading and writing is only done rarely, there really is no point in increasing the complexity of the code to implement an SQL engine.
+
+In my database for flat files, one of the main things I have to reconcile is caching and database persistence. One very important thing is to ensure that databases do not lose data, so I've been trying to figure out a good way to do so. So far, I cache all the objects in memory, and the only time that the file is ever touched is when it is updated. I'm working on embedding transactions into the database, though I don't think I'll be able to go as far as ACID compliance. That will likely be the subject of a future post, as I haven't been spending as much time on it as I'd like to.
